...
  <string name="add_profile_close">Close</string>
  <string name="add_profile_pin_info">With a PIN, nobody else can access a profile besides this assigned user.</string>
  <string name="add_profile_error_image_failed_store">We failed to store your avatar image. Please try again.</string>
  <string name="add_profile_error_name_not_unique">This name is already in use by another profile.</string>
  <string name="add_profile_error_name_empty">Please enter a name for this profile.</string>
  <string name="add_profile_error_name_only_letters">Names can only have letters. Try another name?</string>
  <string name="add_profile_error_pin_length">Your PIN should be 3 digits long.</string>
  <string name="add_profile_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="add_profile_info_content_description">More information on 3-digit PINs.</string>
  <string name="required_fields_content_description">Fields marked with an * are required.</string>
  <string name="current_profile_picture_content_description">Current profile picture</string>
  <string name="edit_profile_picture_content_description">Edit profile picture</string>
  <!-- OnboardingActivity -->
...
  <string name="get_started">Get Started</string>
  <!-- PinPasswordActivity -->
  <string name="pin_password_hello">Hi, %s!</string>
  <string name="pin_password_admin_enter">Please enter your Administrator PIN.</string>
  <string name="pin_password_user_enter">Please enter your PIN.</string>
  <string name="pin_password_forgot_pin">I forgot my pin.</string>
  <string name="pin_password_incorrect_pin">Incorrect PIN.</string>
  <string name="pin_password_show">show</string>
  <string name="pin_password_hide">hide</string>
  <string name="pin_password_close">Close</string>
  <string name="pin_password_success">PIN change is successful</string>
  <string name="pin_password_forgot_title">Forgot PIN?</string>
  <string name="pin_password_forgot_message">To reset your PIN, please uninstall Oppia and then reinstall it.\n\nKeep in mind that if the device has not been online, you may lose user progress on multiple accounts. </string>
  <string name="pin_password_play_store">Go to the play store</string>
  <string name="show_hide_password_icon">Show/Hide password icon</string>
  <!-- AdminSettingsDialogFragment -->
  <string name="admin_settings_label">Administrator\'s PIN</string>
  <string name="admin_settings_heading">Access to Administrator Settings</string>
  <string name="admin_settings_sub">Administrator\'s PIN required to change user\'s PIN</string>
  <string name="admin_settings_cancel">Cancel</string>
  <string name="admin_settings_submit">Submit</string>
  <string name="admin_settings_incorrect">Incorrect Administrator PIN. Please try again.</string>
  <string name="admin_settings_enter_user_new_pin">%1$s\'s New PIN.</string>
  <!-- ResetPinDialogFragment -->
  <string name="reset_pin_enter">Enter a New Pin</string>
  <!-- MyDownloadsActivity -->
  <string name="my_downloads">My Downloads</string>
  <string name="tab_downloads">Downloads</string>
  <string name="tab_updates">Updates (2)</string>
  <!-- HomeActivityBackDialog -->
  <string name="home_activity_back_dialog_message">Would you like to exit your profile?</string>
...
