...
      android:visibility="@{viewModel.showError ? View.VISIBLE : View.INVISIBLE}"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/enter_text_view" />

    <com.chaos.view.PinView
      android:id="@+id/input_pin"
      style="@style/PinWidget.PinView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:cursorVisible="true"
      android:fontFamily="sans-serif"
...
      app:layout_constraintTop_toBottomOf="@+id/pin_password_error_text_view"
      app:lineColor="@color/avatarBorder"
      app:lineWidth="1dp"
      app:viewType="rectangle" />

    <TextView
      android:id="@+id/forgot_pin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:minHeight="48dp"
      android:paddingTop="12dp"
      android:text="@string/pin_password_forgot_pin"
...
